--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -110,6 +110,7 @@ dependencies:
   video_player_avfoundation: 2.4.2
   video_player_platform_interface: 6.1.0
   video_player_web: 2.0.15
+  permission_handler:
 
 
   # The following adds the Cupertino Icons font to your application.
