--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.nyd.app</string>
+	<string>com.food.share.app</string>
 	<key>PROJECT_ID</key>
 	<string>nyd-app</string>
 	<key>STORAGE_BUCKET</key>
