--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -111,6 +111,7 @@ dependencies:
   video_player_platform_interface: 6.1.0
   video_player_web: 2.0.15
   permission_handler:
+  flutter_local_notifications:
 
 
   # The following adds the Cupertino Icons font to your application.
